# OcelGraph

./: LICENSE  README.md  pyproject.toml
notebooks/: Untitled.ipynb  Untitled1.ipynb
scripts/: build_plugin.py
src/ocel_graph/: __init__.py  input.py  plugin.py  resource.py  util.py
src/ocel_graph/inputs/: ocelGraph.py
src/ocel_graph/resources/: ocelGraph.py
